--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.8"
 license = "MIT"
 keywords = []
 authors = [
-  { name = "U.N. Owen", email = "void@some.where" },
+  { name = "Davis Vann Bennett", email = "davis.v.bennett@gmail.com" },
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
