--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ path = "src/pydantic_bigstitcher/__about__.py"
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
+  "xmldiff"
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
