--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,15 +34,17 @@ Source = "https://github.com/unknown/pydantic-bigstitcher"
 [tool.hatch.version]
 path = "src/pydantic_bigstitcher/__about__.py"
 
-[tool.hatch.envs.default]
+[tool.hatch.envs.test]
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
-  "xmldiff"
+  "xmldiff",
+  "xmltodict"
 ]
-[tool.hatch.envs.default.scripts]
-test = "pytest {args:tests}"
-test-cov = "coverage run -m pytest {args:tests}"
+
+[tool.hatch.envs.test.scripts]
+run = "pytest {args:tests}"
+run-cov = "coverage run -m pytest {args:tests}"
 cov-report = [
   "- coverage combine",
   "coverage report",
