--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,21 +28,29 @@ dependencies = [
   ]
 
 [project.urls]
-Documentation = "https://github.com/unknown/pydantic-bigstitcher#readme"
-Issues = "https://github.com/unknown/pydantic-bigstitcher/issues"
-Source = "https://github.com/unknown/pydantic-bigstitcher"
+Documentation = "https://github.com/d-v-b/pydantic-bigstitcher#readme"
+Issues = "https://github.com/d-v-b/pydantic-bigstitcher/issues"
+Source = "https://github.com/d-v-b/pydantic-bigstitcher"
 
-[tool.hatch.version]
-path = "src/pydantic_bigstitcher/__about__.py"
-
-[tool.hatch.envs.test]
-dependencies = [
+[project.optional-dependencies]
+test = [
   "coverage[toml]>=6.5",
   "pytest",
   "xmldiff",
   "xmltodict",
   "deepdiff==8.0.1"
 ]
+
+docs = [
+  "mkdocs-material>=9.5.39", 
+  "mkdocstrings[python]>=0.26.1"
+  ]
+
+[tool.hatch.version]
+path = "src/pydantic_bigstitcher/__about__.py"
+
+[tool.hatch.envs.test]
+features = ["test"]
 
 [tool.hatch.envs.test.scripts]
 run = "pytest {args:tests}"
@@ -55,6 +63,14 @@ cov = [
   "test-cov",
   "cov-report",
 ]
+
+[tool.hatch.envs.docs]
+features = ["docs"]
+
+[tool.hatch.envs.docs.scripts]
+"serve" = "mkdocs serve"
+"build" = "mkdocs build"
+"deploy" = "mkdocs gh-deploy"
 
 [[tool.hatch.envs.all.matrix]]
 python = ["3.10", "3.11", "3.12"]
@@ -88,6 +104,9 @@ exclude_lines = [
 python_version = "3.11"
 ignore_missing_imports = true
 namespace_packages = false
+strict=true
+warn_unreachable = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 
 [tool.ruff]
 line-length = 100
@@ -111,6 +130,13 @@ extend-exclude = [
     "venv",
     "docs",
 ]
+[tool.ruff.lint]                                                           
+    extend-select = [                                                          
+      "B",  # flake8-bugbear
+      "I",  # isort
+      "UP",  # pyupgrade                                                    
+    ] 
+
 
 [tool.pytest.ini_options]
 minversion = "7"
