declare test envs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ path = "src/pydantic_bigstitcher/__about__.py"
 [tool.hatch.envs.test]
 features = ["test"]
 
+[[tool.hatch.envs.test.matrix]]
+python = ["3.10", "3.11", "3.12"]
+
 [tool.hatch.envs.test.scripts]
 run = "pytest {args:tests}"
 run-cov = "coverage run -m pytest {args:tests}"
